<resources>
    <string name="app_name">piedraPapelTijera</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="solo">Solo</string>
    <string name="multiplayer">Multiplayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="papel">papel</string>
    <string name="piedra">piedra</string>
    <string name="tijeras">tijeras</string>
    <string name="la_computadora_elige">La computadora elige:</string>
    <string name="opciones">Opciones</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="salir">Salir</string>
</resources>